// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EnterReceiptPage Component matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="tablet:margin-x-8 overflow-x-auto"
  >
    <h1
      class="usa-prose"
    >
      Enter Receipt
    </h1>
    <table
      class="usa-table grid-col-12 usa-table--borderless"
      role="table"
    >
      <thead>
        <tr
          role="row"
        >
          <th
            colspan="1"
            role="columnheader"
          >
            <div
              class="display-flex flex-justify flex-align-center flex-no-wrap text-no-wrap"
            >
              Loading
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-chevron-up fa-w-14 margin-left-05"
                data-icon="chevron-up"
                data-prefix="fas"
                focusable="false"
                role="img"
                style="visibility: hidden;"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </th>
          <th
            colspan="1"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="display-flex flex-justify flex-align-center flex-no-wrap text-no-wrap"
            >
              SDN
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-chevron-up fa-w-14 margin-left-05"
                data-icon="chevron-up"
                data-prefix="fas"
                focusable="false"
                role="img"
                style="visibility: hidden;"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </th>
          <th
            colspan="1"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="display-flex flex-justify flex-align-center flex-no-wrap text-no-wrap"
            >
              NIIN
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-chevron-up fa-w-14 margin-left-05"
                data-icon="chevron-up"
                data-prefix="fas"
                focusable="false"
                role="img"
                style="visibility: hidden;"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </th>
          <th
            colspan="1"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="display-flex flex-justify flex-align-center flex-no-wrap text-no-wrap"
            >
              Nomenclature
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-chevron-up fa-w-14 margin-left-05"
                data-icon="chevron-up"
                data-prefix="fas"
                focusable="false"
                role="img"
                style="visibility: hidden;"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </th>
          <th
            colspan="1"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="display-flex flex-justify flex-align-center flex-no-wrap text-no-wrap"
            >
              Quantity
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-chevron-up fa-w-14 margin-left-05"
                data-icon="chevron-up"
                data-prefix="fas"
                focusable="false"
                role="img"
                style="visibility: hidden;"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </th>
          <th
            colspan="1"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="display-flex flex-justify flex-align-center flex-no-wrap text-no-wrap"
            >
              Commodity
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-chevron-up fa-w-14 margin-left-05"
                data-icon="chevron-up"
                data-prefix="fas"
                focusable="false"
                role="img"
                style="visibility: hidden;"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </th>
          <th
            colspan="1"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="display-flex flex-justify flex-align-center flex-no-wrap text-no-wrap"
            >
              Subinventory
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-chevron-up fa-w-14 margin-left-05"
                data-icon="chevron-up"
                data-prefix="fas"
                focusable="false"
                role="img"
                style="visibility: hidden;"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </th>
          <th
            colspan="1"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="display-flex flex-justify flex-align-center flex-no-wrap text-no-wrap"
            >
              Locator
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-chevron-up fa-w-14 margin-left-05"
                data-icon="chevron-up"
                data-prefix="fas"
                focusable="false"
                role="img"
                style="visibility: hidden;"
                viewBox="0 0 448 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        role="rowgroup"
      >
        <tr
          role="row"
        >
          <td
            class="td"
            role="cell"
          >
            <span>
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-check fa-w-16 "
                data-icon="check"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </td>
          <td
            class="td"
            role="cell"
          >
            M3030012341234
          </td>
          <td
            class="td"
            role="cell"
          >
            5430015061999
          </td>
          <td
            class="td"
            role="cell"
          >
            TANK,LIQUID STORAGE
          </td>
          <td
            class="td"
            role="cell"
          >
            2
          </td>
          <td
            class="td"
            role="cell"
          >
            Motor Transportation
          </td>
          <td
            class="td"
            role="cell"
          >
            Subinventory
          </td>
          <td
            class="td"
            role="cell"
          >
            locator
          </td>
        </tr>
      </tbody>
    </table>
    <div
      class="grid-row flex-align-start flex-justify"
    >
      <form
        class="display-flex flex-row flex-justify-start flex-align-center flex-no-wrap flex-auto margin-1"
      >
        <input
          class="usa-input"
          placeholder="SDN"
          value=""
        />
        <button
          class="usa-button margin-top-1 margin-left-1 square"
          type="submit"
        >
          Search
        </button>
      </form>
      <button
        class="usa-button margin-top-2"
      >
        Submit All
      </button>
    </div>
    <div
      class="grid-row flex-justify-center flex-12 tablet:flex-4"
    />
  </div>
</DocumentFragment>
`;

exports[`LoadingIcon component renders check icon on fetch success 1`] = `
<DocumentFragment>
  <span>
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-check fa-w-16 "
      data-icon="check"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
        fill="currentColor"
      />
    </svg>
  </span>
</DocumentFragment>
`;

exports[`LoadingIcon component renders error icon on fetch error 1`] = `
<DocumentFragment>
  <span>
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-exclamation-circle fa-w-16 error"
      data-icon="exclamation-circle"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
        fill="currentColor"
      />
    </svg>
  </span>
</DocumentFragment>
`;

exports[`LoadingIcon component renders loading icon when loading 1`] = `
<DocumentFragment>
  <span>
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-spinner fa-w-16 fa-spin "
      data-icon="spinner"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M304 48c0 26.51-21.49 48-48 48s-48-21.49-48-48 21.49-48 48-48 48 21.49 48 48zm-48 368c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zm208-208c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.49-48-48-48zM96 256c0-26.51-21.49-48-48-48S0 229.49 0 256s21.49 48 48 48 48-21.49 48-48zm12.922 99.078c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.491-48-48-48zm294.156 0c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48c0-26.509-21.49-48-48-48zM108.922 60.922c-26.51 0-48 21.49-48 48s21.49 48 48 48 48-21.49 48-48-21.491-48-48-48z"
        fill="currentColor"
      />
    </svg>
  </span>
</DocumentFragment>
`;
